# ChangeLog for app-admin/eselect
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.71 2008/03/20 15:48:40 peper Exp $

*eselect-1.0.11-r1 (20 Mar 2008)

  20 Mar 2008; Piotr Jaroszyński <peper@gentoo.org>
  +files/eselect-1.0.11-fix-paludis-command.patch,
  +eselect-1.0.11-r1.ebuild:
  Add -r1 with a patch fixing paludis_command().

*eselect-1.0.11 (01 Dec 2007)

  01 Dec 2007; Piotr Jaroszyński <peper@gentoo.org> +eselect-1.0.11.ebuild:
  Add 1.0.11.

  05 Aug 2007; nixnut <nixnut@gentoo.org> eselect-1.0.10.ebuild:
  Stable on ppc wrt bug 185691

  01 Aug 2007; Joshua Kinard <kumba@gentoo.org> eselect-1.0.10.ebuild:
  Stable on mips, per #185691.

  01 Aug 2007; <metalgod@gentoo.org> eselect-1.0.10.ebuild:
  Stable on amd64. See bug #185691.

  30 Jul 2007; Raúl Porcel <armin76@gentoo.org> eselect-1.0.10.ebuild:
  alpha/ia64 stable wrt #185691

  30 Jul 2007; Jeroen Roovers <jer@gentoo.org> eselect-1.0.10.ebuild:
  Stable for HPPA (bug #185691).

  30 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> eselect-1.0.10.ebuild:
  Stable on sparc wrt #185691

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> eselect-1.0.10.ebuild:
  Stable on ppc64; bug #185691

  30 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  eselect-1.0.10.ebuild:
  stable x86, bug 185691

*eselect-1.0.10 (17 Jun 2007)

  17 Jun 2007; Danny van Dyk <kugelfang@gentoo.org> +eselect-1.0.10.ebuild:
  Released 1.0.10 that fixes bugs #172472 and #172475. Thanks to Ulrich
  Mueller <ulm@gentoo.org>.

  06 May 2007; Mike Kelly <pioto@gentoo.org> eselect-1.0.9.ebuild:
  Add vim-syntax USE flag to pull in eselect-syntax.

*eselect-1.0.9 (28 Mar 2007)

  28 Mar 2007; <pioto@gentoo.org> +eselect-1.0.9.ebuild:
  Version bump. Fixes parallel install, improper use of DISTDIR, and some
  issues with env.eselect.

  07 Feb 2007; Simon Stelling <blubb@gentoo.org> eselect-1.0.7.ebuild:
  stable on amd64; bug 160535
